--- a/app/src/main/res/layout/fragment_eating.xml
+++ b/app/src/main/res/layout/fragment_eating.xml
@@ -12,4 +12,10 @@
         android:text="Fragment Eating"
         tools:text="Sports Eating"/>
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Map View Test"
+        android:onClick="goToMapView"/>
+
 </FrameLayout>
