--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,20 +1,197 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context="com.udacity.tourguide.MainActivity">
+    android:animateLayoutChanges="true"
+    android:orientation="vertical">
 
-    <android.support.design.widget.TabLayout
-        android:id="@+id/tabs"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:tabMode="fixed" />
 
-    <android.support.v4.view.ViewPager
-        android:id="@+id/viewpager"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+
+
+        <!--<ImageView-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:src="@drawable/google_hq_white"-->
+            <!--android:scaleType="centerCrop"/>-->
+
+        <!--<View-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:background="@color/color_white"/>-->
+
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <android.support.v7.widget.CardView
+                    android:id="@+id/card_see_places"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/margin_16"
+                    android:layout_marginRight="@dimen/margin_16"
+                    android:layout_marginTop="@dimen/margin_16"
+                    android:layout_marginBottom="@dimen/margin_8"
+                    android:backgroundTint="@color/cardBackgroundAlpha"
+                    app:cardCornerRadius="8dp"
+                    app:cardElevation="30dp">
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+
+                        <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="@dimen/layout_margin8"
+                        android:layout_marginTop="@dimen/layout_margin8"
+                        android:layout_marginBottom="@dimen/layout_margin8"
+                        android:text="Why tech lovers love Mountain View?"
+                        android:textSize="@dimen/text_size_20"
+                        android:textStyle="bold"/>
+
+                        <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="@dimen/layout_margin8"
+                        android:layout_marginTop="@dimen/layout_margin8"
+                        android:layout_marginBottom="@dimen/layout_margin8"
+                        android:text="The answer is pretty easy. It concentrates a large ecosystem of Startups. But Startups are made of technology and people. People also love to eat, doing sports and have fun around the city right? \n\n
+That's why we are here. Find out attractions in Mountain View."
+                        android:textAllCaps="false"
+                        android:textSize="@dimen/text_size_16"/>
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="@dimen/layout_margin8"
+                            android:padding="@dimen/layout_margin8"
+                            android:textAlignment="center"
+                            android:text="See Startup list and Attractions!"
+                            android:layout_gravity="bottom"
+                            android:gravity="bottom"
+                            android:textColor="@color/callToActionText"
+                            android:textSize="@dimen/text_size_body_14"
+                            android:textStyle="bold"/>
+                    </LinearLayout>
+                </android.support.v7.widget.CardView>
+
+
+                <HorizontalScrollView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/layout_margin16">
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+
+                        android:orientation="horizontal"
+                        android:gravity="center">
+
+                        <android.support.v7.widget.CardView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginEnd="@dimen/margin_8"
+                            android:layout_marginBottom="@dimen/margin_8"
+                            android:backgroundTint="@color/cardBackgroundAlpha"
+                            app:cardCornerRadius="8dp"
+                            app:cardElevation="30dp">
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:orientation="vertical">
+                                <ImageView
+                                    android:layout_height="150dp"
+                                    android:layout_width="150dp"
+                                    android:layout_margin="@dimen/margin_8"
+                                    android:scaleType="centerCrop"
+                                    android:src="@drawable/slider_google_complex"/>
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="Google"
+                                    android:textStyle="bold"
+                                    android:textAllCaps="true"
+                                    android:layout_gravity="center"
+                                    android:layout_marginBottom="@dimen/margin_8"/>
+                            </LinearLayout>
+                        </android.support.v7.widget.CardView>
+
+                        <android.support.v7.widget.CardView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginEnd="@dimen/margin_8"
+                            android:layout_marginBottom="@dimen/margin_8"
+                            android:backgroundTint="@color/cardBackgroundAlpha"
+                            app:cardCornerRadius="8dp"
+                            app:cardElevation="30dp">
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:orientation="vertical">
+                                <ImageView
+                                    android:layout_height="150dp"
+                                    android:layout_width="150dp"
+                                    android:layout_margin="@dimen/margin_8"
+                                    android:scaleType="centerCrop"
+                                    android:src="@drawable/slider_linkedin"/>
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="Linkedin"
+                                    android:textStyle="bold"
+                                    android:textAllCaps="true"
+                                    android:layout_gravity="center"
+                                    android:layout_marginBottom="@dimen/margin_8"/>
+                            </LinearLayout>
+                        </android.support.v7.widget.CardView>
+
+
+                        <android.support.v7.widget.CardView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginEnd="@dimen/margin_8"
+                            android:layout_marginBottom="@dimen/margin_8"
+                            android:backgroundTint="@color/cardBackgroundAlpha"
+                            app:cardCornerRadius="8dp"
+                            app:cardElevation="30dp">
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:orientation="vertical">
+                                <ImageView
+                                    android:layout_height="150dp"
+                                    android:layout_width="150dp"
+                                    android:layout_margin="@dimen/margin_8"
+                                    android:scaleType="centerCrop"
+                                    android:src="@drawable/slider_mountain_view"/>
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="The City"
+                                    android:textStyle="bold"
+                                    android:textAllCaps="true"
+                                    android:layout_gravity="center"
+                                    android:layout_marginBottom="@dimen/margin_8"/>
+                            </LinearLayout>
+                        </android.support.v7.widget.CardView>
+
+
+
+
+
+                    </LinearLayout>
+                </HorizontalScrollView>
+            </LinearLayout>
+
+        </ScrollView>
+
 </LinearLayout>
