--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,40 @@
     <!-- Height of each list item -->
     <dimen name="list_item_height">88dp</dimen>
     <!-- Default screen margins, per the Android Design guidelines. -->
+    <!-- Style/Typography from Material Design Guidelines-->
+    <dimen name="layout_margin4">4dp</dimen>
+    <dimen name="layout_margin8">8dp</dimen>
+    <dimen name="layout_margin16">16dp</dimen>
+    <dimen name="text_size_display4_112">112sp</dimen>
+    <dimen name="text_size_display3_56">56sp</dimen>
+    <dimen name="text_size_display2_45">45sp</dimen>
+    <dimen name="text_size_display1_34">34sp</dimen>
+    <dimen name="text_size_head24">24sp</dimen>
+    <dimen name="text_size_title_20">20sp</dimen>
+    <dimen name="text_size_sub_heading_16">16sp</dimen>
+    <dimen name="text_size_body_14">14sp</dimen>
+    <dimen name="text_size_button_14">14sp</dimen>
+    <dimen name="text_size_caption_12">12sp</dimen>
+    <dimen name="activity_horizontal_margin">16dp</dimen>
+    <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="nav_header_vertical_spacing">16dp</dimen>
+    <dimen name="nav_header_height">160dp</dimen>
+    <!-- Most used text size -->
+    <dimen name="text_size_8">16sp</dimen>
+    <dimen name="text_size_16">16sp</dimen>
+    <dimen name="text_size_20">20sp</dimen>
+    <dimen name="text_size_24">24sp</dimen>
+    <dimen name="text_size_28">28sp</dimen>
+    <dimen name="text_size_32">32sp</dimen>
+    <dimen name="text_size_36">36sp</dimen>
+    <dimen name="text_size_40">40sp</dimen>
+    <dimen name="text_size_44">44sp</dimen>
+    <dimen name="text_size_48">48sp</dimen>
+    <dimen name="text_size_52">52sp</dimen>
+    <dimen name="text_size_56">56sp</dimen>
+    <dimen name="margin_4">4dp</dimen>
+    <dimen name="margin_8">8dp</dimen>
+    <dimen name="margin_16">16dp</dimen>
+    <dimen name="margin_20">20dp</dimen>
+    <dimen name="margin_24">24dp</dimen>
 </resources>
