--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,41 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="buttonDefault">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_gravity">center</item>
+        <item name="android:textColor">@color/buttonText</item>
+        <item name="android:backgroundTint">@color/buttonAlertBackground</item>
+        <item name="android:textAppearance">?android:textAppearanceMedium</item>
+    </style>
+
+    <style name="cardTitle">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginBottom">@dimen/layout_margin8</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:textColor">@color/textColorCardHighlights</item>
+        <item name="android:backgroundTint">@color/colorAlpha0</item>
+        <item name="android:textSize">@dimen/text_size_sub_heading_16</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="cardSubTitle">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginBottom">@dimen/layout_margin8</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:textColor">@color/textColorCardHighlights</item>
+        <item name="android:textSize">@dimen/text_size_sub_heading_16</item>
+        <item name="android:textStyle">italic</item>
+    </style>
+
+    <style name="cardContentAlignment">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:padding">4dp</item>
+        <item name="android:layout_gravity">center</item>
+    </style>
+
 </resources>
