--- a/app/src/main/res/layout/activity_pager.xml
+++ b/app/src/main/res/layout/activity_pager.xml
@@ -16,5 +16,6 @@
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_margin="@dimen/layout_margin16"/>
 </LinearLayout>
