--- a/app/src/main/res/layout/place_list_item.xml
+++ b/app/src/main/res/layout/place_list_item.xml
@@ -18,17 +18,25 @@
             android:id="@+id/text_view_place_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/colorPrimary"
+            android:textColor="@color/color_dark_grey"
             android:textSize="16sp"
             android:textStyle="bold"
             android:typeface="sans"
             tools:text="Name"/>
         <TextView
+            android:id="@+id/text_view_place_opening_hours"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/color_light_grey"
+            android:textSize="14sp"
+            android:typeface="sans"
+            android:text="9:00 AM | 7:00 PM"/>
+        <TextView
             android:id="@+id/text_view_place_marker"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/colorPrimary"
-            android:textSize="16sp"
+            android:textColor="@color/color_light_grey"
+            android:textSize="12sp"
             android:textStyle="italic"
             android:typeface="sans"
             tools:text="marker" />
