--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,53 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:animateLayoutChanges="true"
+    android:background="@color/color_bg_light"
     android:orientation="vertical">
 
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-
-        <!--<ImageView-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="match_parent"-->
-            <!--android:src="@drawable/google_hq_white"-->
-            <!--android:scaleType="centerCrop"/>-->
-
-        <!--<View-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="match_parent"-->
-            <!--android:background="@color/color_white"/>-->
-
-        <ScrollView
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-            <LinearLayout
+            <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <android.support.v7.widget.CardView
-                    android:id="@+id/card_see_places"
+                android:layout_marginLeft="@dimen/margin_16"
+                android:layout_marginRight="@dimen/margin_16"
+                android:layout_marginTop="@dimen/margin_16"
+                android:layout_marginBottom="@dimen/margin_8"
+                android:backgroundTint="@color/cardBackgroundAlpha"
+                app:cardCornerRadius="8dp"
+                app:cardElevation="30dp">
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/margin_16"
-                    android:layout_marginRight="@dimen/margin_16"
-                    android:layout_marginTop="@dimen/margin_16"
-                    android:layout_marginBottom="@dimen/margin_8"
-                    android:backgroundTint="@color/cardBackgroundAlpha"
-                    app:cardCornerRadius="8dp"
-                    app:cardElevation="30dp">
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical">
+                    android:orientation="vertical">
 
-                        <TextView
+                    <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="@dimen/layout_margin8"
@@ -57,141 +45,112 @@
                         android:textSize="@dimen/text_size_20"
                         android:textStyle="bold"/>
 
-                        <TextView
+                    <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="@dimen/layout_margin8"
                         android:layout_marginTop="@dimen/layout_margin8"
                         android:layout_marginBottom="@dimen/layout_margin8"
-                        android:text="The answer is pretty easy. It concentrates a large ecosystem of Startups. But Startups are made of technology and people. People also love to eat, doing sports and have fun around the city right? \n\n
-That's why we are here. Find out attractions in Mountain View like in the pictures below."
+                        android:text="The answer is pretty easy. It concentrates a large ecosystem of Startups."
                         android:textAllCaps="false"
                         android:textSize="@dimen/text_size_16"/>
 
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginBottom="@dimen/layout_margin8"
-                            android:padding="@dimen/layout_margin8"
-                            android:textAlignment="center"
-                            android:text="See Startup list and attractions!"
-                            android:layout_gravity="bottom"
-                            android:gravity="bottom"
-                            android:textColor="@color/callToActionText"
-                            android:textSize="@dimen/text_size_20"
-                            android:textStyle="bold"/>
-                    </LinearLayout>
-                </android.support.v7.widget.CardView>
-
-
-                <HorizontalScrollView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="@dimen/layout_margin16">
-
-                    <LinearLayout
+                    <Button
+                        android:id="@+id/btn_see_attractions"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginBottom="@dimen/layout_margin8"
+                        android:textAlignment="center"
+                        android:text="See attractions!"
+                        android:layout_gravity="center"
+                        android:textAllCaps="true"
+                        android:textColor="@color/callToActionText"
+                        android:textSize="@dimen/text_size_16"
+                        android:textStyle="bold"/>
+                </LinearLayout>
+            </android.support.v7.widget.CardView>
 
-                        android:orientation="horizontal"
-                        android:gravity="center">
+            <ImageView
+                android:layout_height="150dp"
+                android:layout_width="match_parent"
+                android:layout_margin="@dimen/margin_16"
+                android:layout_gravity="center"
+                android:scaleType="centerCrop"
+                android:src="@drawable/slider_google_complex"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Google"
+                android:textStyle="bold"
+                android:textAllCaps="true"
+                android:layout_gravity="center"
+                android:layout_marginBottom="@dimen/margin_8"/>
 
-                        <android.support.v7.widget.CardView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginEnd="@dimen/margin_8"
-                            android:layout_marginBottom="@dimen/margin_8"
-                            android:backgroundTint="@color/cardBackgroundAlpha"
-                            app:cardCornerRadius="8dp"
-                            app:cardElevation="30dp">
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:orientation="vertical">
-                                <ImageView
-                                    android:layout_height="150dp"
-                                    android:layout_width="150dp"
-                                    android:layout_margin="@dimen/margin_8"
-                                    android:scaleType="centerCrop"
-                                    android:src="@drawable/slider_google_complex"/>
-                                <TextView
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:text="Google"
-                                    android:textStyle="bold"
-                                    android:textAllCaps="true"
-                                    android:layout_gravity="center"
-                                    android:layout_marginBottom="@dimen/margin_8"/>
-                            </LinearLayout>
-                        </android.support.v7.widget.CardView>
+            <ImageView
+                android:layout_height="150dp"
+                android:layout_width="match_parent"
+                android:layout_margin="@dimen/margin_16"
+                android:layout_gravity="center"
+                android:scaleType="centerCrop"
+                android:src="@drawable/slider_linkedin"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Linkedin"
+                android:textStyle="bold"
+                android:textAllCaps="true"
+                android:layout_gravity="center"
+                android:layout_marginBottom="@dimen/margin_8"/>
 
-                        <android.support.v7.widget.CardView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginEnd="@dimen/margin_8"
-                            android:layout_marginBottom="@dimen/margin_8"
-                            android:backgroundTint="@color/cardBackgroundAlpha"
-                            app:cardCornerRadius="8dp"
-                            app:cardElevation="30dp">
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:orientation="vertical">
-                                <ImageView
-                                    android:layout_height="150dp"
-                                    android:layout_width="150dp"
-                                    android:layout_margin="@dimen/margin_8"
-                                    android:scaleType="centerCrop"
-                                    android:src="@drawable/slider_linkedin"/>
-                                <TextView
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:text="Linkedin"
-                                    android:textStyle="bold"
-                                    android:textAllCaps="true"
-                                    android:layout_gravity="center"
-                                    android:layout_marginBottom="@dimen/margin_8"/>
-                            </LinearLayout>
-                        </android.support.v7.widget.CardView>
+            <ImageView
+                android:layout_height="150dp"
+                android:layout_width="match_parent"
+                android:layout_margin="@dimen/margin_16"
+                android:scaleType="centerCrop"
+                android:layout_gravity="center"
+                android:src="@drawable/slider_mountain_view"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="The City"
+                android:textStyle="bold"
+                android:textAllCaps="true"
+                android:layout_gravity="center"
+                android:layout_marginBottom="@dimen/margin_8"/>
 
 
-                        <android.support.v7.widget.CardView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginEnd="@dimen/margin_8"
-                            android:layout_marginBottom="@dimen/margin_8"
-                            android:backgroundTint="@color/cardBackgroundAlpha"
-                            app:cardCornerRadius="8dp"
-                            app:cardElevation="30dp">
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:orientation="vertical">
-                                <ImageView
-                                    android:layout_height="150dp"
-                                    android:layout_width="150dp"
-                                    android:layout_margin="@dimen/margin_8"
-                                    android:scaleType="centerCrop"
-                                    android:src="@drawable/slider_mountain_view"/>
-                                <TextView
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:text="The City"
-                                    android:textStyle="bold"
-                                    android:textAllCaps="true"
-                                    android:layout_gravity="center"
-                                    android:layout_marginBottom="@dimen/margin_8"/>
-                            </LinearLayout>
-                        </android.support.v7.widget.CardView>
+            <ImageView
+                android:layout_height="150dp"
+                android:layout_width="match_parent"
+                android:layout_margin="@dimen/margin_16"
+                android:scaleType="centerCrop"
+                android:layout_gravity="center"
+                android:src="@drawable/slider_upwork"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Upwork"
+                android:textStyle="bold"
+                android:textAllCaps="true"
+                android:layout_gravity="center"
+                android:layout_marginBottom="@dimen/margin_8"/>
 
+            <ImageView
+                android:layout_height="150dp"
+                android:layout_width="match_parent"
+                android:layout_margin="@dimen/margin_16"
+                android:scaleType="centerCrop"
+                android:layout_gravity="center"
+                android:src="@drawable/slider_elastic"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Elastic"
+                android:textStyle="bold"
+                android:textAllCaps="true"
+                android:layout_gravity="center"
+                android:layout_marginBottom="@dimen/margin_8"/>
 
-
-
-
-                    </LinearLayout>
-                </HorizontalScrollView>
-            </LinearLayout>
-
-        </ScrollView>
-
+        </LinearLayout>
+    </ScrollView>
 </LinearLayout>
