--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="color_white">#ffffff</color>
     <color name="color_dark_grey">#3e3e3e</color>
     <color name="color_light_grey">#848484</color>
+    <color name="color_bg_light">#d1d1d1</color>
     <color name="colorPrimary">#1e1e1e</color>
     <color name="colorPrimaryDark">#000000</color>
     <color name="colorAccent">#67a900</color>
