--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -45,4 +45,33 @@
         <item name="android:layout_gravity">center</item>
     </style>
 
+    <style name="cardGenres">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:orientation">horizontal</item>
+        <item name="android:layout_marginBottom">@dimen/layout_margin8</item>
+        <item name="android:layout_marginLeft">@dimen/layout_margin16</item>
+        <item name="android:layout_marginRight">@dimen/layout_margin16</item>
+    </style>
+
+    <style name="cardGenresLayout">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_margin">@dimen/layout_margin8</item>
+        <item name="android:layout_weight">2</item>
+        <item name="android:backgroundTint">@color/textColorBlack</item>
+    </style>
+
+    <style name="cardHighlights">
+        <item name="android:layout_width">120dp</item>
+        <item name="android:layout_height">100dp</item>
+        <item name="android:layout_marginBottom">@dimen/layout_margin16</item>
+        <item name="android:layout_marginLeft">@dimen/layout_margin8</item>
+        <item name="android:layout_marginTop">@dimen/layout_margin8</item>
+        <item name="android:layout_marginRight">@dimen/layout_margin8</item>
+        <item name="android:backgroundTint">@color/cardBackground</item>
+        <item name="android:clickable">true</item>
+        <item name="android:focusable">true</item>
+        <item name="android:foreground">?android:attr/selectableItemBackground</item>
+    </style>
 </resources>
