--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,21 +3,12 @@
     <color name="color_white">#ffffff</color>
     <color name="color_dark_grey">#3e3e3e</color>
     <color name="color_light_grey">#848484</color>
+    <color name="color_bg_white_alpha">#b7ffffff</color>
     <color name="color_bg_light">#d1d1d1</color>
+    <color name="color_bg_light2">#afafaf</color>
     <color name="colorPrimary">#1e1e1e</color>
     <color name="colorPrimaryDark">#000000</color>
-    <color name="colorAccent">#67a900</color>
+    <color name="colorAccent">#006ec6</color>
     <color name="colorPrimaryLight">#BBDEFB</color>
-    <color name="cardBackground">#c9e6e6e6</color>
-    <color name="cardBackgroundAlpha">#bfffffff</color>
-    <color name="view_image_overlay">#d3ffffff</color>
-    <color name="buttonText">#FFFFFF</color>
-    <color name="textColorWhite">#FFFFFF</color>
-    <color name="textColorCardHighlights">#565656</color>
     <color name="textColorBlack">#000000</color>
-    <color name="divider">#cfcfcf</color>
-    <color name="buttonAlertBackground">#006ec6</color>
-    <color name="callToActionText">#67a900</color>
-    <color name="buttonDefaultGrey">#313131</color>
-    <color name="colorAlpha0">#85ffffff</color>
 </resources>
