--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,70 +8,12 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
-    <style name="buttonDefault">
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">wrap_content</item>
+    <!-- MainActivity - Gallery Image -->
+    <style name="gallery_image">
+        <item name="android:layout_width">300dp</item>
+        <item name="android:layout_height">250dp</item>
         <item name="android:layout_gravity">center</item>
-        <item name="android:textColor">@color/buttonText</item>
-        <item name="android:backgroundTint">@color/buttonAlertBackground</item>
-        <item name="android:textAppearance">?android:textAppearanceMedium</item>
-    </style>
-
-    <style name="cardTitle">
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_marginBottom">@dimen/layout_margin8</item>
-        <item name="android:textAlignment">center</item>
-        <item name="android:textColor">@color/textColorCardHighlights</item>
-        <item name="android:backgroundTint">@color/colorAlpha0</item>
-        <item name="android:textSize">@dimen/text_size_sub_heading_16</item>
-        <item name="android:textStyle">bold</item>
-    </style>
-
-    <style name="cardSubTitle">
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_marginBottom">@dimen/layout_margin8</item>
-        <item name="android:textAlignment">center</item>
-        <item name="android:textColor">@color/textColorCardHighlights</item>
-        <item name="android:textSize">@dimen/text_size_sub_heading_16</item>
-        <item name="android:textStyle">italic</item>
-    </style>
-
-    <style name="cardContentAlignment">
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:padding">4dp</item>
-        <item name="android:layout_gravity">center</item>
-    </style>
-
-    <style name="cardGenres">
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:orientation">horizontal</item>
-        <item name="android:layout_marginBottom">@dimen/layout_margin8</item>
-        <item name="android:layout_marginLeft">@dimen/layout_margin16</item>
-        <item name="android:layout_marginRight">@dimen/layout_margin16</item>
-    </style>
-
-    <style name="cardGenresLayout">
-        <item name="android:layout_width">0dp</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_margin">@dimen/layout_margin8</item>
-        <item name="android:layout_weight">2</item>
-        <item name="android:backgroundTint">@color/textColorBlack</item>
-    </style>
-
-    <style name="cardHighlights">
-        <item name="android:layout_width">120dp</item>
-        <item name="android:layout_height">100dp</item>
-        <item name="android:layout_marginBottom">@dimen/layout_margin16</item>
-        <item name="android:layout_marginLeft">@dimen/layout_margin8</item>
-        <item name="android:layout_marginTop">@dimen/layout_margin8</item>
-        <item name="android:layout_marginRight">@dimen/layout_margin8</item>
-        <item name="android:backgroundTint">@color/cardBackground</item>
-        <item name="android:clickable">true</item>
-        <item name="android:focusable">true</item>
-        <item name="android:foreground">?android:attr/selectableItemBackground</item>
+        <item name="android:layout_marginEnd">@dimen/margin_4</item>
+        <item name="android:scaleType">centerCrop</item>
     </style>
 </resources>
